--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-replace": "^3.0.1",
+    "fusioncharts": "3.18.0",
+    "sirv-cli": "^2.0.0",
+    "svelte-fusioncharts": "^1.0.0"
   }
 }
